--- a/CSS/donor_dashboard.css
+++ b/CSS/donor_dashboard.css
@@ -28,8 +28,8 @@ body {
     position: fixed;
     width: 300px;
     height: 100%;
-    background: var(--red);
-    border-left: 10px solid var(--pink);
+    background: var(--pink);
+    border-left: 10px solid var(--red);
     transition: 0.5s;
     overflow: hidden;
 }
@@ -115,6 +115,23 @@ body {
     top: -50px;
     box-shadow: 35px 35px 0 10px var(--white);
 }
+#logo {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+#logo img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  
+}
 
 .main {
     position: relative;
@@ -149,23 +166,7 @@ body {
     font-size: 2.5rem;
     cursor: pointer;
 }
-#logo {
-    position: relative;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    cursor: pointer;
-}
 
-#logo img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  
-}
 .search {
     position: relative;
     width: 400px;
@@ -193,7 +194,6 @@ body {
     left: 2px;
     font-size: 1.2rem;
 }
-
 .user {
     position: relative;
     width: 40px;
@@ -210,7 +210,6 @@ body {
     height: 100%;
     object-fit: cover;
 }
-
 .sub-menu-wrap{
     position: absolute;
     top: 100%;
@@ -272,75 +271,6 @@ body {
 .sub-menu-link:hover p{
     font-weight: 600;
 }
-.cardbox {
-    position: relative;
-    width: 100%;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 30px;
-}
-
-.cardbox .card .content {
-    align-items: center;
-    display: flex;
-    float: left;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.cardbox .card .iconBx {
-    position: relative;
-    align-items: center;
-    width: 60px;
-    height: 50px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.cardbox .card .iconBx img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.cardbox .card {
-    position: relative;
-    background: var(--white);
-    padding: 30px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-}
-
-.cardbox .card .numbers {
-    position: relative;
-    left: 2cqh;
-    font-weight: 500;
-    font-size: 1.5rem;
-    color: var(--red);
-}
-
-.cardbox .card .cardname {
-    color: var(--black);
-    font-size: 2rem;
-    margin-top: 5px;
-}
-
-.cardbox .card:hover {
-    opacity: 0.7;
-}
-
-.cardbox-2 {
-    position: relative;
-    top: 70px;
-}
-
 .cardbox-3{
     position: relative;
     top: 20px;
