--- a/CSS/registration.css
+++ b/CSS/registration.css
@@ -25,3 +25,16 @@ form{
    padding: 20px;
    border-radius: 10px;
 }
+.btnrqst{
+    position: relative;
+    background-color: rgb(135, 8, 25);
+    border: 999px;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 8px 18px;
+    font-family: 'DM serif';
+}
+.btnrqst:hover{
+   opacity: 0.5;
+}
