--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -149,7 +149,23 @@ body {
     font-size: 2.5rem;
     cursor: pointer;
 }
+#logo {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
 
+#logo img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  
+}
 .search {
     position: relative;
     width: 400px;
@@ -183,7 +199,6 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    overflow: hidden;
     cursor: pointer;
 }
 
@@ -196,6 +211,67 @@ body {
     object-fit: cover;
 }
 
+.sub-menu-wrap{
+    position: absolute;
+    top: 100%;
+    right: 10%;
+    width: 320px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+    z-index: 1000;
+}
+.sub-menu-wrap.open-menu{
+    max-height: 400px;
+}
+
+.sub-menu{
+    background-color: #f5f5f5;
+    padding: 20px;
+    margin: 10px;
+}
+.user-info{
+    display: flex;
+    align-items: center;
+}
+.user-info h3{
+    font-weight: 500;
+}
+
+.sub-menu hr{
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #ccc;
+    margin: 15px 0 10px;
+}
+.sub-menu-link{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    margin: 12px 0;
+}
+.sub-menu-link p{
+    width: 100%;
+}
+.sub-menu-link i{
+    width: 40px;
+    background: var(--pink);
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+}
+.sub-menu-link span{
+    font-size: 22px;
+    transition: transform 0.5s;
+}
+.sub-menu-link:hover span{
+    transform: translateX(5px);
+}
+.sub-menu-link:hover p{
+    font-weight: 600;
+}
 .cardbox {
     position: relative;
     width: 100%;
@@ -292,15 +368,21 @@ body {
         left: 300px;
     }
 
-    .cardbox {
+    .cardbox ,
+    .cardbox-3{
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 480px) {
-    .cardbox {
+    .cardbox{
         grid-template-columns: repeat(1, 1fr);
     }
+    .cardbox-3{
+        grid-template-columns: repeat(2, 2fr);
+    }
+    
+    
 
     .navigation {
         width: 100%;
@@ -314,3 +396,65 @@ body {
     top: 100%;
     background-color: red;
 }
+
+
+
+
+.cardbox-3 {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: space-evenly;
+    position: relative;
+    top: 100px;
+    left: 20px;
+    width: 100%;
+}
+
+.cardbox-3 .card {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 150px;
+    text-align: center;
+    position: relative;
+}
+
+.cardbox-3 .content {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    
+}
+
+.cardbox-3 .iconBx {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 24px;
+    color: var(--red);
+}
+
+.cardbox-3 .cardname {
+    margin-top: 60px;
+    font-size: 1.2rem;
+    color: #333;
+}
+
+.cardbox-3 .numbers {
+    margin-top: auto;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #555;
+}
+
+@media (max-width: 768px) {
+    .cardbox-3 {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
