--- a/CSS/input.css
+++ b/CSS/input.css
@@ -54,7 +54,10 @@ body {
 
 span {
     color: rgb(138, 18, 18);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
+
+
 
 .carousel-inner .carousel-item {
     position: relative;
